--- a/ClimaTICO/app/src/main/res/values/strings.xml
+++ b/ClimaTICO/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">ClimaTICO</string>
+    <string name="nome_da_cidade">Nome da cidade</string>
+    <string name="xxc_aparencia">XXCº, aparencia</string>
+    <string name="temperatura_m_xima_xx_c">Temperatura máxima: XX ºC</string>
+    <string name="temperatura_m_nima_xx_c">Temperatura mínima: XX ºC</string>
+    <string name="sensa_o_t_rmica_xx_c">Sensação térmica: XX ºC</string>
+    <string name="velocidade_do_vento_xx_km_h">Velocidade do vento: XX km/h</string>
+    <string name="umidade_xx">Umidade: XX%</string>
+    <string name="busque_pela_cidade">Busque pela cidade</string>
+    <string name="buscar_previs_o">Buscar Previsão</string>
 </resources>
